# wasmer_android_jnicall_repro

./: README.md
android/app/: build.gradle
android/app/src/androidTest/java/com/wasmer/android/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: main.wasm
android/app/src/main/java/com/wasmer/android/: MainActivity.java
android/app/src/test/java/com/wasmer/android/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
android_runtime/: Cargo.toml  README.md
android_runtime/.cargo/: config
android_runtime/src/: lib.rs
test_module/: Cargo.toml  README.md
test_module/src/: lib.rs
